--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>705</height>
+    <height>724</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -393,11 +393,42 @@ QLabel#categoryLabel {
        </item>
        <item>
         <widget class="QPushButton" name="logoutButton">
+         <property name="minimumSize">
+          <size>
+           <width>50</width>
+           <height>50</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>50</height>
+          </size>
+         </property>
+         <property name="layoutDirection">
+          <enum>Qt::LayoutDirection::LeftToRight</enum>
+         </property>
          <property name="styleSheet">
-          <string notr="true">background-color: rgb(0, 0, 0);</string>
+          <string notr="true">QPushButton {
+                  background-color: rgba(255, 255, 255, 0.1);
+                  border: none;
+                  border-radius: 10px;
+              }
+              QPushButton:hover {
+                  background-color: rgba(255, 255, 255, 0.2);
+              }</string>
          </property>
          <property name="text">
-          <string>🚪</string>
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset theme="QIcon::ThemeIcon::ApplicationExit"/>
+         </property>
+         <property name="iconSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
          </property>
         </widget>
        </item>
@@ -407,7 +438,7 @@ QLabel#categoryLabel {
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="mainMenuPage">
        <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -795,6 +826,12 @@ color: rgb(255, 255, 255);</string>
             <property name="text">
              <string>🌱 Kezdő</string>
             </property>
+            <property name="checkable">
+             <bool>false</bool>
+            </property>
+            <property name="autoExclusive">
+             <bool>false</bool>
+            </property>
            </widget>
           </item>
           <item>
@@ -955,6 +992,9 @@ QPushButton:hover {
         </item>
         <item>
          <widget class="QFrame" name="questionCard">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -993,7 +1033,7 @@ QPushButton:hover {
              <property name="minimumSize">
               <size>
                <width>0</width>
-               <height>250</height>
+               <height>280</height>
               </size>
              </property>
              <layout class="QVBoxLayout" name="answersLayout">
